fixing roadmaps spacing on top

--- a/src/components/Show.css
+++ b/src/components/Show.css
@@ -13,7 +13,7 @@ div.ui.fluid.transparent.input {
 }
 
 .ui.segment:first-child {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
 .ui.segment:last-child,
